--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/ordermanagement">
               <span class="menu-title">Order Management</span>
             </a>
           </li>
