--- a/public/css/orderDetails.css
+++ b/public/css/orderDetails.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   background-color: #f3f3f3;
   margin: 0;
   padding: 20px;
   line-height: 1.6;
-}
+} */
 .order-details-container {
   max-width: 900px;
   margin: 0 auto;
