--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -1,94 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
 
-    <!-- Bootstrap CSS and Font Awesome -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
-    <link href="/css/tiny-slider.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/viewOrder.css">
-    <link rel="stylesheet" href="/css/dash.css">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="author" content="Untree.co" />
+  <link rel="shortcut icon" href="favicon.png" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="bootstrap, bootstrap4" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Bootstrap CSS and Font Awesome -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
+  <link href="/css/tiny-slider.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/dash.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+    integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-    <style>
-      .errormessagedash {
-        color: red;
-        font-size: 14px;
-        margin-top: 5px;
-      }
-    </style>
+<body>
+  <%- include("./layouts/header.ejs") %>
 
-  </head>
-  <body>
-    <%- include("./layouts/header.ejs") %>
     <div class="containerdac">
       <div class="sidebar">
         <ul>
-          <li><a  href="/dashboard"><i class="fa-solid fa-user" style="color: #000000;"></i><span style="margin-left: 3px;">Dashboard</span> </a></li>
-          <li><a class="sdashbord" href="/orders"><i class="fa-solid fa-briefcase" style="color: #ffffff;"></i><span  style="margin-left: 3px;color: #ffffff;">Orders</span></a></li>
-          <li><a  href="/my-address"><i class="fa-solid fa-location-dot" style="color: #000000;"></i><span style="margin-left: 3px; color: #000000;">My Address</span></a></li>
-          <% if (user && user.isGoogleLogin === false) { %>
-            <li><a href="/change-password"><i class="fa-solid fa-key" style="color: #000000;"></i><span style="margin-left: 3px;">Change Password</span></a></li>
-        <% } %>        
-          <li><a href="/wallet"><i class="fa-solid fa-wallet" style="color: #000000;"></i><span style="margin-left: 3px;">Wallet</span></a></li>
-          <li><a href="/logout"><i class="fa-solid fa-arrow-right-from-bracket" style="color: #000000;"></i><span style="margin-left: 3px;">Logout</span></a></li>
+          <li><a href="/dashboard"><i class="fa-solid fa-user" style="color: #000000;"></i><span
+                style="margin-left: 3px;">Dashboard</span> </a></li>
+          <li><a class="sdashbord" href="/orders"><i class="fa-solid fa-briefcase" style="color: #ffffff;"></i><span
+                style="margin-left: 3px;color: #ffffff;">Orders</span></a></li>
+          <li><a href="/my-address"><i class="fa-solid fa-location-dot" style="color: #000000;"></i><span
+                style="margin-left: 3px; color: #000000;">My Address</span></a></li>
+          <% if (user && user.isGoogleLogin===false) { %>
+            <li><a href="/change-password"><i class="fa-solid fa-key" style="color: #000000;"></i><span
+                  style="margin-left: 3px;">Change Password</span></a></li>
+            <% } %>
+              <li><a href="/wallet"><i class="fa-solid fa-wallet" style="color: #000000;"></i><span
+                    style="margin-left: 3px;">Wallet</span></a></li>
+              <li><a href="/logout"><i class="fa-solid fa-arrow-right-from-bracket" style="color: #000000;"></i><span
+                    style="margin-left: 3px;">Logout</span></a></li>
         </ul>
       </div>
+
       <div class="content">
         <div class="dash-box">
-        <p style="color: #000000; font-weight: bold;">My Orders</p>
+          <p style="color: #000000; font-weight: bold;">Order Details</p>
         </div>
-      
-        <!-- <div class="orders-container">
-          <div class="orders-header">
-            <h1>My Orders</h1>
-          </div> -->
         
-          <% if (orders && orders.length > 0) { %>
-            <% orders.forEach(order => { %>
-              <div class="order-item">
-                <div class="order-details">
-                  <h3>Order ID: <%= order.id %></h3>
-                  <p>Placed on: <%= order.date %></p>
-                  <p>Shipping Address: <%= order.shippingAddress %></p>
-                  <p>Status: <span class="status-<%= order.statusClass %>"><%= order.status %></span></p>
-                </div>
-                <div class="products">
-                  <% order.products.forEach(product => { %>
-                    <div class="product-item">
-                      <img src="<%= product.productImage %>" alt="Product Image">
-                      <p>Name: <%= product.name %></p>
-                      <p>Category: <%= product.category %></p>
-                      <p>Quantity: <%= product.quantity %></p>
-                      <p>Price: $<%= product.price.toFixed(2) %></p>
-                    </div>
-                  <% }) %>
-                </div>
-                <div class="order-actions">
-                  <a href="<%= order.trackOrderLink %>" class="btn btn-track">Track Package</a>
-                  <a href="<%= order.detailsLink %>" class="btn btn-details">View Details</a>
-                </div>
+        <div">
+        <% if (orders && orders.length> 0) { %>
+          <% orders.forEach(order=> { %>
+            <div class="order-item" style="border: 1px solid #000000; padding: 8px; margin-bottom: 4px; border-radius: 5px;">
+              <div class="order-details">
+                <h3>Order ID: <%= order.id %>
+                </h3>
+                <p>Placed on: <%= order.date %>
+                </p>
+                
+                      <p>Status: <span class="status-<%= order.statusClass %>">
+                          <%= order.status %>
+                        </span></p>
               </div>
+
+              <div class="products">
+                <% order.products.forEach(product=> { %>
+                  <div class="product-item">
+                    <img src="<%= product.images[0] || '/images/placeholder.jpg' %>" alt="Product Image">
+                    <p>Name: <%= product.name %>
+                    </p>
+                    <p>Category: <%= product.category %>
+                    </p>
+                    <p>Quantity: <%= product.quantity %>
+                    </p>
+                    <p>Price: $<%= product.price.toFixed(2) %>
+                    </p>
+                  </div>
+                  <% }) %>
+              </div>
+
+              <div class="order-actions d-flex justify-content-end">
+                <a href="/order/details/<%= order.id %>" class="btn btn-details">View Details</a>
+              </div>
+            </div>
             <% }); %>
-          <% } else { %>
-            <p>No orders found!</p>
-          <% } %>
-        </div>
-       </div>
-    </div> 
+              <% } else { %>
+                <p>No orders found!</p>
+                <% } %>
+      </div>
+    </div>
+  </div>
+
     <%- include("./layouts/footer.ejs") %>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Fix the script path -->
-    <script src="js/users/myAddress.js"></script>
-  </body>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</body>
+
 </html>
