--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -98,7 +98,7 @@
               <% product.colors.forEach(color => { %>
               <button
                 class="color-option"
-                style="background-color: <%= color %>"
+                style="background-color: '<%= color %>'"
               ></button>
               <% }) %>
             </div>
