--- a/views/users/thankyou.ejs
+++ b/views/users/thankyou.ejs
@@ -78,8 +78,8 @@
             <h2 class="display-3 text-black">Thank you!</h2>
             <p class="lead mb-5">You order was successfuly completed.</p>
             <p>
-              <a href="shop.html" class="btn btn-sm btn-outline-black"
-                >Back to shop</a
+              <a href="/home" class="btn btn-sm btn-outline-black" style="background-color: rgb(58, 123, 58); color: white;"
+                >Back to home</a
               >
             </p>
           </div>
