--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -285,7 +285,7 @@
         // Filter by price range
         function filterByPrice(range) {
           const priceRanges = {
-            'lowToHigh': '0-500',
+            'lowToHigh': 'lowToHigh',
             '500-1000': '500-1000',
             '1000-2000': '1000-2000',
             '2000-5000': '2000-5000',
