--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -61,9 +61,9 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12">
-            <div class="border p-4 rounded" role="alert">
+            <!-- <div class="border p-4 rounded" role="alert">
               Returning customer? <a href="#">Click here</a> to login
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="row">
