--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -28,8 +28,8 @@
       </ul>
       <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
         <li>
-          <a href="wishlist.html">
-            <a href="wishlist.html"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
+          <a href="/wishlist">
+            <a href="/wishlist"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
           </a>
         </li>
         <li>
